versions/v2.0.3/README_HE.md
# ספר הטיולים של אילן — גרסת מוצר 2.0 — גרסת מסמך 2.0.3

זוהי תיקיית העבודה המקומית של גרסה 2. היא בנויה כ־PWA בעברית וב־RTL, אך בשלב זה לא פורסמה, לא נדחפה ל־GitHub ולא בוצע עבורה commit.

## מה כלול בגרסה 2

- 90 המסלולים המקוריים, 18 מסעות בני יומיים ושלושה מסעות גדולים נשמרו.
- נוספו 53 צירים חדשים במעמד גלוי של **„מועמד באימות”**. לא הומצאו להם מרחק, זמן או אישור דרך.
- מסננים מנורמלים לפי אזור, רמת רכיבה, אופי כביש ורמת אימות.
- מפה עצלה לכל כרטיס וקישור מלא ל־Google Maps; קישורי Waze לעצירות.
- Dark Mode לפי המערכת ובבחירה ידנית.
- מרכז בטיחות מלא למוביל, מאסף, מרשלים, רכיבה מדורגת, מרחקים ומיגון.
- כתב ויתור, הודעת שימוש ראשון ואיסור שימוש באתר בזמן רכיבה.
- שמירת מסלולים מקומית; בחירות ישנות מן המפתח `roadTripCombinedV02` מיובאות בלי למחוק את נתוני גרסה 1.
- הקראה מקומית בעברית באמצעות מנגנון הדיבור של המכשיר.
- ממשק שאלות AI עם תשובה מקומית מעוגנת בתוכן כאשר שירות הענן אינו מחובר.
- שלד Worker מאובטח ב־`api-worker/`: המפתח נשאר בשרת, הלקוח שולח מזהי מסלול/עצירה בלבד, קיימות הגבלות שימוש ו־`store:false`.

## הפעלה מקומית והתקנה בכרום

הפעילו את `הפעלה_מקומית_בכרום.cmd`. הקובץ מפעיל שרת מקומי בכתובת `http://localhost:4173/` ופותח את Chrome.

פתיחה ישירה של `index.html` ב־`file://` מציגה את התוכן, אך PWA ו־Service Worker דורשים `localhost` או HTTPS. כפתור **התקנת האפליקציה** מופיע רק כאשר Chrome מחזיר אירוע התקנה תקין; אפשר להתקין גם מתפריט Chrome.

## מצב ה־AI

הממשק וה־backend המקומי מוכנים, אך שירות ענן חי אינו מחובר משום שאין בפרויקט מפתח API או כתובת serverless מאושרת. אין להכניס `OPENAI_API_KEY` ל־HTML, ל־JavaScript, ל־GitHub Pages או למאגר.

ברירת המחדל ל־AI טקסט היא `gpt-5.6-luna`, וניתן לשנותה רק במשתנה הסביבה `OPENAI_TEXT_MODEL`. מודל הקול מוגדר דרך `OPENAI_TTS_MODEL` וברירת המחדל המקומית היא `tts-1`; יש לבצע בדיקה חיה והאזנה אנושית בעברית לפני פרסום.

## בדיקות מקומיות

מתוך התיקייה:

```powershell
node --check assets\app-v2.js
node --check sw.js
node --check api-worker\src\worker.js
node --test tests\validate-v2.mjs
node --test api-worker\test\context.test.js
```

## גרסאות ושמירת היסטוריה

- גרסת המוצר: **2.0**.
- גרסת המסמך הנוכחית: **2.0.3**.
- גרסה 1.1.1 נשמרת תחת `versions/v1.1.1/`.
- `book.html` נשמר כקובץ המקור של גרסה 1 ואינו נדרס.
- בכל סבב שינוי עתידי יש להעלות את גרסת המסמך הגלויה וגם את גרסת ה־cache ב־`sw.js`.

## מגבלות אמת לפני פרסום

- 53 הצירים החדשים דורשים Place IDs או קואורדינטות, בדיקת דרך סלולה, מרחק, זמן ונסיעת ביקורת לפני שדרוג ל„מאומת”.
- מפות, Waze, קישורים חיצוניים ו־AI ענן דורשים חיבור לאינטרנט.
- אין עדיין מאגר תמונות בעל רישיון וקרדיט לכל מסלול; תצוגת המפה משמשת כתצוגה חזותית מבלי להעתיק תמונות מוגנות.
- אי אפשר לסמן AI ענן או קול ענן כפעילים לפני פריסת Worker נפרדת, הגדרת סודות ובדיקות אינטגרציה חיות.
- `robots.txt` ו־`noindex` מצמצמים גילוי במנועי חיפוש אך אינם מגינים בסיסמה. אם האתר יפורסם, כל מי שמקבל את הקישור יוכל לפתוח ולהעביר אותו.
